# JovinGit

./: .clangd  .gitignore  CMakeLists.txt  build.sh
.cache/clangd/index/: Commands.cpp.7080088591E720D4.idx  Commands.hpp.08EE7051DC1F29A3.idx  FileColumns.hpp.9B38FC59B0807343.idx  Git.cpp.863C33C86A64B333.idx  Git.hpp.D32B87E39A10014B.idx  GridFiles.cpp.7B257169B190BA2B.idx  GridFiles.hpp.09E03AB1CDB4EF92.idx  MainWindow.cpp.FB579F4A75E880A8.idx  MainWindow.hpp.C1957462F7ED4077.idx  Utils.cpp.D8627FAA497F7144.idx  Utils.hpp.9BE30B962B018C66.idx  main.cpp.0FD33676709BD44F.idx
.github/workflows/: build.yml
src/: main.cpp
src/components/: FileColumns.hpp  GridFiles.hpp
src/service/git/: Commands.cpp  Commands.hpp  Git.cpp  Git.hpp
src/tools/: Utils.cpp  Utils.hpp
src/windows/: MainWindow.cpp  MainWindow.hpp
